- Finish SQL Server Repository - Finish DB config - Add loader for start-up - Begin refactor of JMS config.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,5 @@ spring.datasource.password=Weonlyusesqltogether2020
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 #hibernate.id.new_generator_mappings=false
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = create
 
-spring.jpa.hibernate.ddl-auto = none
-
-spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
