--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	implementation 'org.springframework:spring-jms:5.2.6.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
 
 	implementation 'com.microsoft.sqlserver:mssql-jdbc:7.0.0.jre8'
 	implementation 'org.json:json:20200518'
